Andrei-am-creat-html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Title</title>
 </head>
 <body>
+<div class="principal">
+    <div>
+    <input type="text" placeholder="introdu textul">
+    <button>Submit</button>
+    </div>
+    <div class="display">
+        <p>cuvantul tau e format din:</p>
+        <h3>0</h3>
+    </div>
+</div>
 
 <script src="script.js"></script>
 </body>
